test/tests/errors/error-array-access-out-of-bounds2.sm
// true
// false
/**/
/**/

program {
    array x[0:4];
    x[5] = 1;
}